# Cakra

./: .env.example  .gitignore  Cargo.toml
migrations/: 001_initial.sql
scripts/: backup.sh  deploy.sh  validate_migrations.py  validate_observations.py
src/: config.rs  lib.rs  main.rs  wallet.rs
src/analyzer/: authority.rs  creator.rs  dexscreener.rs  entry_confirmation.rs  goplus.rs  honeypot.rs  liquidity.rs  metadata.rs  mod.rs  opportunity.rs  rugcheck.rs  scoring.rs  socials.rs
src/db/: mod.rs  queries.rs  schema.rs
src/detector/: grpc.rs  mod.rs  parser.rs  pumpfun.rs  pumpportal.rs  pumpswap.rs  queue.rs  raydium.rs  ws.rs
src/executor/: helius_sender.rs  jito.rs  jupiter.rs  mod.rs  positions.rs  price_feed.rs  priority.rs  pumpfun_buy.rs  pumpportal_trade.rs  raydium.rs  retry.rs  router.rs  sell.rs  tp_sl.rs
src/models/: mod.rs  position.rs  settings.rs  token.rs  trade.rs
src/monitoring/: logger.rs  mod.rs
src/risk/: cooldown.rs  lists.rs  manager.rs  mod.rs  slippage.rs
src/security/: encrypt.rs  mod.rs  ratelimit.rs
src/telegram/: alerts.rs  bot.rs  buy_ui.rs  history_ui.rs  menu.rs  mod.rs  paste.rs  positions_ui.rs  settings_ui.rs  sniper_ui.rs  wallet_ui.rs
